[package]
name = "etherwhales"
version = "0.1.0"
authors = ["Yuanchao Sun <yuanchao.sun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pretty_env_logger = "0.4"
serde_json = "1.0"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }